08_cis/sample-edge-route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    name: my-nginx-ingress-controller
    f5type: systest
  name: svc1-route-edge
spec:
  host: cafe.example.com
  path: "/tea"
  port:
    targetPort: 443
  tls:
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIICsjCCAZoCCQDD64a1ke0GszANBgkqhkiG9w0BAQsFADAbMRkwFwYDVQQDDBBj
[...]
      h8o8Wlt9ldnibvZIFFrcX8QswscQxw==
      -----END CERTIFICATE-----
    key: |
      -----BEGIN RSA PRIVATE KEY-----
      MIIEpAIBAAKCAQEAvdU3eMYksmBbqhwN5ePm+/4CNgJVLM9IlTffwn3nSGNcZVhG
[...]
      W/x66PeEQMOrwmBXiZc98lIas8rEm2V8JwD2ItFl5AO0TjXu8eL4Yg==
      -----END RSA PRIVATE KEY-----
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  to:
    kind: Service
    name: my-nginx-ingress-controller
